# github-action-play

./: .gitignore  Cargo.toml  README.md  index.html
.github/actions-rs/: grcov.yml  grcov2.yml
.github/workflows/: build-release.yml  cargo-docs.yml  clippy.yml  coverage.yml  gh-pages.yml  py.yml  tag-branch.yml  test.yml
coverage/: index.html
coverage/printer/src/: index.html
coverage/scratch/src/: index.html
docs/: index.html
docs/coverage/: index.html
docs/coverage/printer/src/: index.html  lib.rs.html
docs/coverage/scratch/src/: index.html  main.rs.html
docs/scratch/: .rustc_info.json
docs/scratch/debug/.fingerprint/printer-f73b8461766de3fe/: doc-lib-printer  doc-lib-printer.json
docs/scratch/debug/.fingerprint/scratch-7054c07b2a78459d/: doc-bin-scratch  doc-bin-scratch.json
docs/scratch/doc/: source-files.js
docs/scratch/doc/printer/: all.html  index.html
docs/scratch/doc/src/scratch/: main.rs.html
printer/: Cargo.toml
printer/src/: lib.rs
pycode/: output-version.py  requirements.txt
scratch/: .rustc_info.json  Cargo.toml
scratch/debug/.fingerprint/printer-99e62dc7b469643c/: lib-printer
scratch/debug/.fingerprint/printer-f73b8461766de3fe/: doc-lib-printer
scratch/debug/.fingerprint/scratch-7054c07b2a78459d/: doc-bin-scratch  doc-bin-scratch.json
scratch/doc/: settings.html
scratch/doc/printer/: fn.stringerang.html
scratch/doc/scratch/: all.html
scratch/src/: main.rs
src/: main.rs
versions/v0.12.20/coverage/: coverage.json
versions/v0.12.20/scratch/doc/: crates.js  help.html  search-index.js
(+8 files in other folders)
