[package]
name = "scratch"
version = "0.12.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.20.0-alpha.1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
ed25519-dalek = { version = "1", features = ["serde"] }
exitcode = "1"
frunk = "0.4"
frunk_core = "0.4"
futures-util = "0.3"
hex = "0.4"
lazy_static = "1"
log = { version = "0.4", features = ["std"] }
regex = "1"
rand = "0.8"
rmp-serde = "1.0"
rstest = "0.12"
serde = { version = "1", features = ["derive"] }
serde-diff = "0.4"
serde_json = "1"
serde_repr = "0.1"
snafu = "0.7.0-beta.2"
clap = {version = "3.1.6", features = ["derive"]}
tokio = { version = "1.17", features = ["full"] }

# Hashing
sha2 = "0.10"
tiny-keccak = { version = "2", features = ["keccak"] }
